objects/MaintenanceAnnaiOptions__c.object
<CustomObject>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SortNo__c</fullName>
        <label>SortNo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TechnicalAlwaysFalse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TechnicalAlwaysFalse</label>
        <type>Checkbox</type>
    </fields>
    <label>オプションマスター</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <columns>Obsolete__c</columns>
        <columns>SortNo__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>MAO-{00000000}</displayFormat>
        <label>MaintenanceAnnaiOptionsNo</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>